--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,8 +1,3 @@
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 html {
   height: 100%;
 }
@@ -15,6 +10,7 @@ body {
   min-height: 100%;
   background-color: #000000;
   color: #FFFFFF;
+  padding: 0;
 }
 
 #root {
